# trame-gwc

./: .codespellrc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: test_and_release.yml
examples/: demo.py  generic_components.py  simple_authentication.py
src/trame_gwc/module/: .gitignore  __init__.py
src/trame_gwc/widgets/: gwc.py
tests/: test_import.py
trame/modules/: components.py
trame/widgets/: gwc.py
trame_gwc/: __init__.py
trame_gwc/module/: __init__.py
trame_gwc/widgets/: gwc.py
vue-components/: .eslintrc.json  .prettierrc  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js  vue.config.js
vue-components/src/: main.js  use.js
vue-components/src/components/: RestProvider.vue  restProvider.vue
vue_components/: package.json
vue_components/src/: use.js
