[project]
name = "trame-gwc"
version = "0.2.0"
description = "Trame wrapper to girder_web_components"
authors = [
    {name = "Kitware Inc."},
]
dependencies = [
    "trame-client>=3.4,<4"
]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "Apache License 2.0"}
keywords = ["Python", "Interactive", "Web", "Application", "Framework"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
]
examples = [
    "trame",
    "trame-vuetify",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/trame_gwc/module/serve/**",
  "src/**/*.py",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/trame_gwc",
    "src/trame",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/trame_gwc/__init__.py:__version__"]
build_command = "pip install uv && uv build"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[lint.pydocstyle]
convention = "google"