[metadata]
name = trame-gwc
version = 0.1.0
description = Trame wrapper to girder_web_components
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kitware Inc.
license = Apache License
classifiers =
    Environment :: Web Environment
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame-client

[options.extras_require]
dev =
    pytest
    black
    flake8
    trame
    trame-vuetify

[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)
